--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="/assets/style.css" />
+        <link rel="stylesheet" href="assets/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet" />
 
         <title>GifMachine</title>
@@ -34,5 +34,5 @@
         </form>
         <div style="background:transparent !important" id="gifsAppearHere" class="jumbotron myJumbotron"></div>
     </body>
-    <script src="/assets/main.js"></script>
+    <script src="assets/main.js"></script>
 </html>
