--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>click a button to see some funny gifs, or add your own!</p>
             </div>
             <div id="addButton" class="panel-body"></div>
-            <p id="text">(click the gif to play, pause, and restart!)</p>
+            <p id="text">(double-click the gif to play, pause, and restart!)</p>
         </div>
         <form id="gifForm">
             <label form="gifInput">Add a button!</label>
